--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
@@ -2,74 +2,81 @@
 
 {% block content %}
 {%if perms.gestion_administrativo.view_funcionario%}
-<div class="card">
-	<div class="card-body">
-		<center>  <h2> <i class="bi-person-check-fill">Listado de Funcionarios</i></h2> </center>    
+	<div class="container">
+		<div class="card">
+			<div class="card-body">
+				<center>  <h2> <i class="bi-person-check-fill">Listado de Funcionarios</i></h2> </center>    
 
-<table  align="right" >
-    <tr>
-    <td> 
-		{%if perms.gestion_administrativo.add_funcionario%}
-		<a href="/administrativo/agregar_funcionario/" class="btn btn-success">
-			<i class="bi-person-plus-fill"></i>
-			Agregar un funcionario
-		</a> 
-		{%endif%}
-	</td>
-    </tr>
-</table>
-<br>
-<br>
-<br>
+					<table  align="right" >
+						<tr>
+						<td> 
+							{%if perms.gestion_administrativo.add_funcionario%}
+							<a href="/administrativo/agregar_funcionario/" class="btn btn-success">
+								<i class="bi-person-plus-fill"></i>
+								Agregar un funcionario
+							</a> 
+							{%endif%}
+						</td>
+						</tr>
+					</table>
+					<br>
+					<br>
+					<br>
 
-<table class="table table-striped table-hover">
-	<thead>
-		<tr>
-			<th>N° de Documento</th>
-			<th>Nombre y apellido</th>
-			<th>Dirección</th>
-			<th>Teléfono</th>
-			<th>Correo electrónico</th>
-			<!-- <td>Cargo</td> -->
-			<th>Acciones</th>
-		</tr>
-		
-	</thead>
-	<tbody>
-		{% if object_list %}
-		{% for funcionario in object_list %}
-		<tr>
-			<td>{{ funcionario.numero_documento }}</td>
-			<td>{{ funcionario.numero_documento.nombre }} {{funcionario.numero_documento.apellido}}</td>
-			<td>{{ funcionario.numero_documento.direccion }}</td>
-			<td>{{ funcionario.numero_documento.telefono }}</td>
-			<td>{{ funcionario.numero_documento.correo_electronico }}</td>
-			<!-- <td>{{ funcionario.cargos.cargo }}</td> -->
-			
-			<td>
-				{%if perms.gestion_administrativo.change_funcionario%}
-				<a class="btn btn-primary" href="/administrativo/modificar_funcionario/{{funcionario.id_funcionario}}">
-					<i class="bi-pencil-square"></i>
-					Editar
-				</a>
-				{%endif%}
-				{%if perms.gestion_administrativo.delete_funcionario%}
-				<a class="btn btn-danger" href="/administrativo/eliminar_funcionario/{{funcionario.id_funcionario}}">
-					<i class="bi-trash-fill" ></i>
-					Eliminar
-				</a>
-				{%endif%}
-			</td>
-		</tr>
-		{% endfor %}
-		
-		{% else %}
-		<h1>No hay registros de funcionarios</h1>
-		{% endif %}
-	</tbody>
-</table> 
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th>Nro</th>
+								<th>N° de Documento</th>
+								<th>Nombre y apellido</th>
+								<th>Dirección</th>
+								<th>Teléfono</th>
+								<th>Correo electrónico</th>
+								<!-- <td>Cargo</td> -->
+								<th>Acciones</th>
+							</tr>
+							
+						</thead>
+						<tbody>
+							{% if object_list %}
+							{% for funcionario in object_list %}
+							<tr>
+								<td >{{forloop.counter}}</td>
+								<td>{{ funcionario.numero_documento }}</td>
+								<td>{{ funcionario.numero_documento.nombre }} {{funcionario.numero_documento.apellido}}</td>
+								<td>{{ funcionario.numero_documento.direccion }}</td>
+								<td>{{ funcionario.numero_documento.telefono }}</td>
+								<td>{{ funcionario.numero_documento.correo_electronico }}</td>
+								<!-- <td>{{ funcionario.cargos.cargo }}</td> -->
+								
+								<td>
+									{%if perms.gestion_administrativo.change_funcionario%}
+									<a class="btn btn-primary" href="/administrativo/modificar_funcionario/{{funcionario.id_funcionario}}">
+										<i class="bi-pencil-square"></i>
+										Editar
+									</a>
+									{%endif%}
+								</td>
+								
+								<td>
+									{%if perms.gestion_administrativo.delete_funcionario%}
+									<a class="btn btn-danger" href="/administrativo/eliminar_funcionario/{{funcionario.id_funcionario}}">
+										<i class="bi-trash-fill" ></i>
+										Eliminar
+									</a>
+									{%endif%}
+								</td>
+							</tr>
+							{% endfor %}
+							
+							{% else %}
+							<h1>No hay registros de funcionarios</h1>
+							{% endif %}
+						</tbody>
+					</table> 
 
+			</div>
+		</div>
 	</div>
-</div>
 {% endif %}
 {% endblock%}
