--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_cargo.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_cargo.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-
+{%if perms.gestion_administrativo.change_cargo%}
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
@@ -14,6 +14,21 @@
             <div class="card-body">
                 <form method="POST">
                     {% csrf_token %}
+                    {% if messages %}
+                                    <ul class="messages">
+                                        {% for message in messages %}
+                                        <li>
+                                            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
+                                            {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                                            <B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
+                                            
+                                            {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
+                                            {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
+                                            {{ message }}
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                    {% endif %}
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
@@ -57,4 +72,5 @@
             </div>
         </div>
 </div>
+{%endif%}
 {%endblock%}
