--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_funcionario.html
@@ -71,14 +71,10 @@
                     </div>
                     <hr>
                     <table  align="right" >
-                        <tr>
-                            <td> 
-                                <a href="/administrativo/agregar_funcionario/" class="btn btn-success">Agregar otro funcionario +</a> 
-                            </td>
-                        </tr>
-                        <div class="container mt-3 text-center">
-                            <a href="http://127.0.0.1:8000/panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> 🔼Inicio</a>
-                        </div>
+                    
+                         <div class="container mt-3 text-center">
+                            <a href=" /panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> <i class="bi bi-house-door"></i>Inicio</a>
+                         </div>
                     </table>
                 
                     <table  align="left" >
@@ -89,7 +85,9 @@
                         </tr>
                     </table>
                 </form>
+                <br>
             </div>
+             <br>
         </div>
 </div>
 {%endblock%}
