--- a/Proyecto2/SmileSoft/gestion_roles/templates/roles/agregar_roles.html
+++ b/Proyecto2/SmileSoft/gestion_roles/templates/roles/agregar_roles.html
@@ -2,6 +2,7 @@
 
 {%block content%}
 {%if perms.gestion_roles.add_rol%} 
+<div class="container">
   <div class=" col-md-10 offset-md-1" >
         <div class="card">
             <br>
@@ -37,6 +38,7 @@
             </div>
              <div>
         </div>
+    </div>
 </div>
 {%endif%}
 {%endblock%}
