--- a/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_usuario.html
@@ -83,7 +83,7 @@
            
  {% else%}
 <h2 class="titulo text-center">
-                  No tiene permisos para ingresar a esta sección
+                <i class="bi bi-incognito"></i>  No tiene permisos para ingresar a esta sección
                  
                   
               </h2>
@@ -91,9 +91,9 @@
                     <hr>
                         
                         <table  align="right" >
-                               <div class="container mt-3 text-left">
-                                 <a href="http://127.0.0.1:8000/base/" data-toggle="tooltip" title="Vuelve al inicio"> 🔼 Inicio</a>
-                               </div>
+                                 <div class="container mt-3 text-center">
+                                     <a href=" /panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> <i class="bi bi-house-door"></i>Inicio</a>
+                                 </div>
                             <tr>
                             <td> <a href="/listar_usuario/" class="btn btn-info">Ver listado de los usuarios </a> </td>
                             </tr>
