--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_cargo.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_cargo.html
@@ -1,70 +1,86 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-
-<div class="col-12 col-md-6 offset-md-3">
-        <div class="card">
-            <br>
-            <center>  <h2>Agregar Cargo</h2> </center>
-                <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Ingrese los datos del Cargo ! </small>
-                </div>
-            <div class="card-body">
-                <form method="POST">
-                    {% csrf_token %}
-                    <div style="margin: 20px;" >
-                        <table>
-                            <div class="form-group">
-                                <br><label for="{{form.nombre.name}}">{{form.nombre.label}}</label></br>
-                                {{form.nombre}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <br><label for="{{form.salario.name}}">{{form.salario.label}}</label></br>
-                                {{form.salario}}
-                            </div>
-                            <br>
-                            <br>
-                         </table>
+{%if perms.gestion_administrativo.add_cargo%}
+    <div class="col-12 col-md-6 offset-md-3">
+            <div class="card">
+                <br>
+                <center>  <h2>Agregar Cargo</h2> </center>
+                    <div class="container mt-3 text-center">
+                        <small> <b>   ¡ Ingrese los datos del Cargo ! </small>
                     </div>
-
-                    <div class="d-flex justify-content-center">
-                        <button class="btn btn-primary" type="submit" style="margin: 10px;">
-                            <i class="bi-save"></i>
-                            Guardar
-                        </button>
-                        <a href="/administrativo/listar_cargo/ " class="btn btn-danger" style="margin: 10px;">
-                            <i class="bi-x-circle"></i>
-                            Cancelar
-                        </a>
-                    </div>
-                    <table  align="right" >
-                        <tr>
-                            <td> 
-                                <a href="/administrativo/agregar_cargo/" class="btn btn-success">
-                                    <i class="bi-person-plus-fill"></i>
-                                    Agregar otro cargo
-                                </a> 
-                            </td>
-                        </tr>
-                        <div class="container mt-3 text-center">
-                            <a href="http://127.0.0.1:8000/panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> 🔼Inicio</a>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        {% if messages %}
+                                        <ul class="messages">
+                                            {% for message in messages %}
+                                            <li>
+                                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
+                                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                                                <B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
+                                                
+                                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
+                                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
+                                                {{ message }}
+                                            </li>
+                                            {% endfor %}
+                                        </ul>
+                            {% endif %}
+                        <div style="margin: 20px;" >
+                            <table>
+                                <div class="form-group">
+                                    <br><label for="{{form.nombre.name}}">{{form.nombre.label}}</label></br>
+                                    {{form.nombre}}
+                                </div>
+                                <br>
+                                <div class="form-group">
+                                    <br><label for="{{form.salario.name}}">{{form.salario.label}}</label></br>
+                                    {{form.salario}}
+                                </div>
+                                <br>
+                                <br>
+                            </table>
                         </div>
-                    </table>
-                
-                    <table  align="left" >
-                        <tr>
-                            <td> 
-                                <a href="/administrativo/listar_cargo/" class="btn btn-info">
-                                    <i class="bi-view-list"></i>
-                                    Ver listado de cargos
-                                </a> 
-                            </td>
-                        </tr>
-                    </table>
 
-                </form>
+                        <div class="d-flex justify-content-center">
+                            <button class="btn btn-primary" type="submit" style="margin: 10px;">
+                                <i class="bi-save"></i>
+                                Guardar
+                            </button>
+                            <a href="/administrativo/listar_cargo/ " class="btn btn-danger" style="margin: 10px;">
+                                <i class="bi-x-circle"></i>
+                                Cancelar
+                            </a>
+                        </div>
+                        <table  align="right" >
+                            <tr>
+                                <td> 
+                                    <a href="/administrativo/agregar_cargo/" class="btn btn-success">
+                                        <i class="bi-person-plus-fill"></i>
+                                        Agregar otro cargo
+                                    </a> 
+                                </td>
+                            </tr>
+                            <div class="container mt-3 text-center">
+                                <a href="http://127.0.0.1:8000/panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> 🔼Inicio</a>
+                            </div>
+                        </table>
+                    
+                        <table  align="left" >
+                            <tr>
+                                <td> 
+                                    <a href="/administrativo/listar_cargo/" class="btn btn-info">
+                                        <i class="bi-view-list"></i>
+                                        Ver listado de cargos
+                                    </a> 
+                                </td>
+                            </tr>
+                        </table>
+
+                    </form>
+                </div>
             </div>
-        </div>
-</div>
+    </div>
+{%endif%}
 {%endblock%}
