--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_especialista_salud.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-
+{%if perms.gestion_administrativo.add_especialista_salud%}
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
@@ -14,6 +14,21 @@
             <div class="card-body">
                 <form method="POST">
                     {% csrf_token %}
+                     {% if messages %}
+                        <ul class="messages">
+                            {% for message in messages %}
+                            <li>
+                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
+                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %} 
+                        
+                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
+                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
+                                {{ message }}
+                            </li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
@@ -84,9 +99,9 @@
                                 </a> 
                             </td>
                         </tr>
-                        <div class="container mt-3 text-center">
-                            <a href="http://127.0.0.1:8000/panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> 🔼Inicio</a>
-                        </div>
+                          <div class="container mt-3 text-center">
+                                <a href=" /panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> <i class="bi bi-house-door"></i>Inicio</a>
+                          </div>
                         <br>
                     </table>
                 
@@ -105,4 +120,5 @@
             </div>
         </div>
 </div>
+{%endif%}
 {%endblock%}
