--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialista_salud.html
@@ -1,67 +1,68 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
-{%if perms.gestion_administrativo.view_funcionario%}
-<div class="card">
-	<div class="card-body">
-		<center>  <h2> <i class="bi-file-earmark-medical"></>Listado de Especialistas de salud</i></h2> </center>
+	{%if perms.gestion_administrativo.view_especialistasalud%}
+		<div class="container">
+			<div class="card">
+				<div class="card-body">
+					<center>  <h2> <i class="bi-file-earmark-medical"></>Listado de Especialistas de salud</i></h2> </center>
 
-<table  align="right" >
-    <tr>
-    <td>
-		{%if perms.gestion_administrativo.add_especialista_salud%}
-		<a href="/administrativo/agregar_especialista_salud/" class="btn btn-success">
-			<i class="bi-person-plus-fill"></i>
-			Agregar un especialista de salud
-		</a>
-		{%endif%}
-	</td>
-    </tr>
-</table>
-<br>
-<br>
-<br>
+				<table  align="right" >
+					<tr>
+					<td>
+						{%if perms.gestion_administrativo.add_especialista_salud%}
+						<a href="/administrativo/agregar_especialista_salud/" class="btn btn-success">
+							<i class="bi-person-plus-fill"></i>
+							Agregar un especialista de salud
+						</a>
+						{%endif%}
+					</td>
+					</tr>
+				</table>
+				<br>
+				<br>
+				<br>
 
-<table class="table table-striped table-hover">
-	<thead style="border: 1cm;">
-		<tr>
-			<th>Numero de documento</th>
-			<th>Nombre y apellido</th>
-			<th>Direccion</th>
-			<th>Acciones</th>
-		</tr>
-		
-	</thead>
-	<tbody>
-		{% if object_list %}
-		{% for especialista in object_list %}
-		<tr>
-			<td>{{ especialista.numero_documento }}</td>
-			<td>{{ especialista.numero_documento.nombre }} {{especialista.numero_documento.apellido}}</td>
-			<td>{{ especialista.numero_documento.direccion }}</td>
-			<td>
-				{%if perms.gestion_administrativo.change_especialista_salud%}
-				<a class="btn btn-primary" href="/administrativo/modificar_especialista_salud/{{especialista.id_especialista_salud}}">
-					<i class="bi-pencil-square"></i>
-					Editar
-				</a>
-				{%endif%}
-				{%if perms.gestion_administrativo.delete_especialista_salud%}
-				<a class="btn btn-danger" href="/administrativo/eliminar_especialista_salud/{{especialista.id_especialista_salud}}">
-					<i class="bi-trash-fill" ></i>
-					Eliminar
-				</a>
-				{%endif%}
-			</td>
-		</tr>
-		{% endfor %}
-		
-		{% else %}
-		<h1>No hay registros de especialistas de salud</h1>
-		{% endif %}
-	</tbody>
-</table> 
-	</div>
-</div>
-{% endif %}
+				<table class="table table-striped table-hover">
+					<thead style="border: 1cm;">
+						<tr>
+							<th>Numero de documento</th>
+							<th>Nombre y apellido</th>
+							<th>Direccion</th>
+							<th>Acciones</th>
+						</tr>
+						
+					</thead>
+						<tbody>
+							{% if object_list %}
+							{% for especialista in object_list %}
+							<tr>
+								<td>{{ especialista.numero_documento }}</td>
+								<td>{{ especialista.numero_documento.nombre }} {{especialista.numero_documento.apellido}}</td>
+								<td>{{ especialista.numero_documento.direccion }}</td>
+								<td>
+									{%if perms.gestion_administrativo.change_especialista_salud%}
+									<a class="btn btn-primary" href="/administrativo/modificar_especialista_salud/{{especialista.id_especialista_salud}}">
+										<i class="bi-pencil-square"></i>
+										Editar
+									</a>
+									{%endif%}
+									{%if perms.gestion_administrativo.delete_especialista_salud%}
+									<a class="btn btn-danger" href="/administrativo/eliminar_especialista_salud/{{especialista.id_especialista_salud}}">
+										<i class="bi-trash-fill" ></i>
+										Eliminar
+									</a>
+									{%endif%}
+								</td>
+							</tr>
+							{% endfor %}
+							
+							{% else %}
+							<h1>No hay registros de especialistas de salud</h1>
+							{% endif %}
+						</tbody>
+				</table> 
+			</div>
+		</div>
+	{% endif %}
 {% endblock%}
