--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente.html
@@ -1,95 +1,100 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
+
 {%if perms.gestion_administrativo.view_paciente%}
-<div class="card">
-	<div class="card-body">
-		<center>  <h2>	 <i class="bi-person-lines-fill">Listado de Pacientes</i></h2> </center>    
+<div class="container">
+	<div class="card">
+		<div class="card-body">
+			<center>  <h2>	 <i class="bi-person-lines-fill">Listado de Pacientes</i></h2> </center>    
 
-	
-<table  align="right" >
-    <tr>
-    <td> 
-		{%if perms.gestion_administrativo.add_paciente%}
-		<a href="/administrativo/agregar_paciente/" class="btn btn-success">
-			<i class="bi-person-plus-fill"></i>
-			Agregar un paciente
-		</a> 
-		{%endif%}
-	</td>
-    </tr>
-</table>
-<br>
-<br>
-<br>
-
-<table class="table table-striped table-hover">
-	<thead style="border: 1cm;">
-		<tr>
-			<th>N° de Documento</th>
-			<th>Nombre y apellido</th>
-			<th>Dirección</th>
-			<th>Teléfono</th>
-			<th>Correo electrónico</th>
-			<th>Fecha de nacimiento</th>
-			<th >Acciones</th>
-		</tr>
 		
-	</thead>
-	<tbody>
-		{%if perms.gestion_administrativo.view_persona%}
-			{% if object_list %}
-			{% for paciente in object_list %}
+	<table  align="right" >
+		<tr>
+		<td> 
+			{%if perms.gestion_administrativo.add_paciente%}
+			<a href="/administrativo/agregar_paciente/" class="btn btn-success">
+				<i class="bi-person-plus-fill"></i>
+				Agregar un paciente
+			</a> 
+			{%endif%}
+		</td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<br>
+
+	<table class="table table-striped table-hover">
+		<thead style="border: 1cm;">
 			<tr>
-				<td>{{ paciente.numero_documento }}</td>
-				<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
-				<td>{{ paciente.numero_documento.direccion }}</td>
-				<td>{{ paciente.numero_documento.telefono }}</td>
-				<td>{{ paciente.numero_documento.correo_electronico }}</td>
-				<td>{{ paciente.numero_documento.fecha_nacimiento }}</td>
-				<td>
-					{%if perms.gestion_administrativo.change_paciente%}
-					<a class="btn btn-primary" href="/administrativo/modificar_paciente/{{paciente.id_paciente}}">
-						<i class="bi-pencil-square"></i>
-						Editar
-					</a>
-					{%endif%}
-				</td>
-				<td>
-						{%if perms.gestion_administrativo.delete_paciente%}
-					<a class="btn btn-danger" href="/administrativo/eliminar_paciente/{{paciente.id_paciente}}">
-						<i class="bi-trash-fill" ></i>
-						Eliminar
-					</a>
-					{%endif%}
-				</td>
+				<th>Nro</th>
+				<th>N° de Documento</th>
+				<th>Nombre y apellido</th>
+				<th>Dirección</th>
+				<th>Teléfono</th>
+				<th>Correo electrónico</th>
+				<th>Fecha de nacimiento</th>
+				{% comment %} <th >Acciones</th> {% endcomment %}
 			</tr>
-			{% endfor %}
 			
-			{% else %}
-			<h1>No hay registros de pacientes</h1>
-			{% endif %}
+		</thead>
+		<tbody>
+			{%if perms.gestion_administrativo.view_persona%}
+				{% if object_list %}
+				{% for paciente in object_list %}
+				<tr>
+					<td >{{forloop.counter}}</td>
+					<td>{{ paciente.numero_documento }}</td>
+					<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
+					<td>{{ paciente.numero_documento.direccion }}</td>
+					<td>{{ paciente.numero_documento.telefono }}</td>
+					<td>{{ paciente.numero_documento.correo_electronico }}</td>
+					<td>{{ paciente.numero_documento.fecha_nacimiento }}</td>
+					<td>
+						{%if perms.gestion_administrativo.change_paciente%}
+						<a class="btn btn-primary" href="/administrativo/modificar_paciente/{{paciente.id_paciente}}">
+							<i class="bi-pencil-square"></i>
+							Editar
+						</a>
+						{%endif%}
+					</td>
+					<td>
+							{%if perms.gestion_administrativo.delete_paciente%}
+						<a class="btn btn-danger" href="/administrativo/eliminar_paciente/{{paciente.id_paciente}}">
+							<i class="bi-trash-fill" ></i>
+							Eliminar
+						</a>
+						{%endif%}
+					</td>
+				</tr>
+				{% endfor %}
+				
+				{% else %}
+				<h1>No hay registros de pacientes</h1>
+				{% endif %}
 
-			{% if messages %}
-							<ul class="messages">
-							
-								{% for message in messages %}
-								<li>
-									{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
-									{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-									<B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
-									
-									{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
-									{% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
-									{{ message }}
-								</li>
-								{% endfor %}
-							</ul>
-							{% endif %}
-		{%endif%}
-	</tbody>
-</table> 
+				{% if messages %}
+								<ul class="messages">
+								
+									{% for message in messages %}
+									<li>
+										{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
+										{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+										<B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
+										
+										{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
+										{% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
+										{{ message }}
+									</li>
+									{% endfor %}
+								</ul>
+								{% endif %}
+			{%endif%}
+		</tbody>
+	</table> 
 
+		</div>
 	</div>
 </div>
 {%endif%}
