--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
@@ -1,72 +1,74 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
-{%if perms.gestion_administrativo.view_persona%}
-<div class="card">
-	<div class="card-body">
-		<center>  <h2> <i class="bi bi-people-fill">Listado de Personas</i></h2> </center>    
-		<table  align="right" >
-			<tr>
-			<td> 
-				{%if perms.gestion_administrativo.add_persona%}
-				<a href="/administrativo/agregar_persona/" class="btn btn-success">
-					<i class="bi-person-plus-fill"></i>
-					Agregar una persona
-				</a> 
-				{%endif%}
-			</td>
-			</tr>
-		</table>
-		<br>
-		<br>
-		<br>
-		
-		<table class="table table-striped table-hover">
-			<thead>
-				<tr>
-					<th>Nro</th>
-					<th>N° de Documento</th>
-					<th>Nombre y apellido</th>
-					<!-- <td>Funcionario</td>
-					<td>Personal de salud</td>
-					<td>Paciente</td> -->
-					<th>Acciones</th>
-				</tr>
-				
-			</thead>
-			<tbody>
-				{% if object_list %}
-				{% for persona in object_list %}
-				<tr>
-					<td >{{forloop.counter}}</td>
-					<td>{{ persona.numero_documento }}</td>
-					<td>{{ persona.nombre }} {{persona.apellido}}</td>
-					<!-- <td>{{ persona.es_funcionario }}</td>
-					<td>{{ persona.es_personal_salud }}</td>
-					<td>{{ persona.es_paciente }}</td> -->
-					<td>
-						{%if perms.gestion_administrativo.change_persona%}
-						<a class="btn btn-primary" href="/administrativo/modificar_persona/{{persona.numero_documento}}">
-							<i class="bi-pencil-square"></i>
-							Editar
-						</a>
-						{%endif%}
-						{%if perms.gestion_administrativo.delete_persona%}
-						<a class="btn btn-danger" href="/administrativo/eliminar_persona/{{persona.numero_documento}}">
-							<i class="bi-trash-fill" ></i>
-							Eliminar
-						</a>
-						{%endif%}
-					</td>
-				</tr>
-				{% endfor %}
-				
-				{% else %}
-				<h1>No hay registros de personas</h1>
-				{% endif %}
-			</tbody>
-		</table> 
-	</div>
-</div>
-{%endif%}
+	{%if perms.gestion_administrativo.view_persona%}
+		<div class="container">
+			<div class="card">
+				<div class="card-body">
+					<center>  <h2> <i class="bi bi-people-fill">Listado de Personas</i></h2> </center>    
+					<table  align="right" >
+						<tr>
+						<td> 
+							{%if perms.gestion_administrativo.add_persona%}
+							<a href="/administrativo/agregar_persona/" class="btn btn-success">
+								<i class="bi-person-plus-fill"></i>
+								Agregar una persona
+							</a> 
+							{%endif%}
+						</td>
+						</tr>
+					</table>
+					<br>
+					<br>
+					<br>
+					
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th>Nro</th>
+								<th>N° de Documento</th>
+								<th>Nombre y apellido</th>
+								<!-- <td>Funcionario</td>
+								<td>Personal de salud</td>
+								<td>Paciente</td> -->
+								<th>Acciones</th>
+							</tr>
+							
+						</thead>
+						<tbody>
+							{% if object_list %}
+							{% for persona in object_list %}
+							<tr>
+								<td >{{forloop.counter}}</td>
+								<td>{{ persona.numero_documento }}</td>
+								<td>{{ persona.nombre }} {{persona.apellido}}</td>
+								<!-- <td>{{ persona.es_funcionario }}</td>
+								<td>{{ persona.es_personal_salud }}</td>
+								<td>{{ persona.es_paciente }}</td> -->
+								<td>
+									{%if perms.gestion_administrativo.change_persona%}
+									<a class="btn btn-primary" href="/administrativo/modificar_persona/{{persona.numero_documento}}">
+										<i class="bi-pencil-square"></i>
+										Editar
+									</a>
+									{%endif%}
+									{%if perms.gestion_administrativo.delete_persona%}
+									<a class="btn btn-danger" href="/administrativo/eliminar_persona/{{persona.numero_documento}}">
+										<i class="bi-trash-fill" ></i>
+										Eliminar
+									</a>
+									{%endif%}
+								</td>
+							</tr>
+							{% endfor %}
+							
+							{% else %}
+							<h1>No hay registros de personas</h1>
+							{% endif %}
+						</tbody>
+					</table> 
+				</div>
+			</div>
+		</div>
+	{%endif%}	
 {% endblock%}
