--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_persona.html
@@ -13,6 +13,7 @@
             
             <div class="card-body">
                 <form method="POST">
+                   
                     {%csrf_token%}
                     <div style="margin: 20px;">
                         <table>
@@ -206,8 +207,8 @@
                                 <a href="/administrativo/agregar_persona/" class="btn btn-success">Agregar a otra persona +</a> 
                             </td>
                         </tr> {% endcomment %}
-                        <div class="container mt-3 text-center">
-                            <a href="http://127.0.0.1:8000/panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> 🔼Inicio</a>
+                       <div class="container mt-3 text-center">
+                         <a href=" /panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> <i class="bi bi-house-door"></i>Inicio</a>
                         </div>
                     </table>
                 
@@ -218,7 +219,9 @@
                             </td>
                         </tr>
                     </table>
+                    <br>
                 </form>
+                 <br>
             </div>
         </div>
 </div>
