--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
@@ -1,58 +1,56 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-  {%if perms.gestion_tratamiento.add_tratamiento%}
-  <div class=" col-md-10 offset-md-1" >
-        <div class="card">
-            <br>
-            <center>  <h2>Agregar Tratamiento</h2> </center>      
-                <!-- <form method="POST" id="group_form" novalidate=""> -->
-           
-                <form action="" method="post">
-                    {%csrf_token%}
-                    <div style="margin: 20px;" > 
-                        {%if mensaje%}
-                            <div class="alert alert-success" role="alert">
-                                  ✅ Tratamiento agregado correctamente
-                            </div>
-                            {%endif%}
-                                {{form.as_p}} 
-                                    <!-- <table>
-                                        <div class="form-group">
-                                            <p>
-                                            <label for="{{form.descripcion_tratamiento.name}}">{{form.descripcion_tratamiento.label}}</label></p>
-                                            {{form.descripcion_tratamiento}}
-                                        </div>
-                                    
-                                        </Table> -->
-      </div> 
-                    <!-- <div style="margin: 20px;" ></div> -->
+    {%if perms.gestion_tratamiento.add_tratamiento%}
+
+       <div class="container">
+            <div class=" col-md-10 offset-md-1" >
+                    <div class="card">
+                        <br>
+                        <center>  <h2>Agregar Tratamiento</h2> </center>      
+                            <!-- <form method="POST" id="group_form" novalidate=""> -->
                     
-                    <div class="d-flex justify-content-center">
-                        <button class="btn btn-primary" type="submit" style="margin: 10px;">Guardar</button>
-                        <a href="/tratamiento/listar_tratamiento/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                            <form action="" method="post">
+                                {%csrf_token%}
+                                <div style="margin: 20px;" > 
+                                    {%if mensaje%}
+                                        <div class="alert alert-success" role="alert">
+                                            ✅ Tratamiento agregado correctamente
+                                        </div>
+                                    {%endif%}
+                                            {{form.as_p}} 
+                                                <!-- <table>
+                                                    <div class="form-group">
+                                                        <p>
+                                                        <label for="{{form.descripcion_tratamiento.name}}">{{form.descripcion_tratamiento.label}}</label></p>
+                                                        {{form.descripcion_tratamiento}}
+                                                    </div>
+                                                
+                                                    </Table> -->
+                                </div> 
+                                <!-- <div style="margin: 20px;" ></div> -->
+                                
+                                <div class="d-flex justify-content-center">
+                                    <button class="btn btn-primary" type="submit" style="margin: 10px;">Guardar</button>
+                                    <a href="/tratamiento/listar_tratamiento/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                                </div>
+                                <hr>
+                            
+                            </form>
                     </div>
-                    <hr>
-                   
-                </form>
-            </div>
-             <div>
-
-        </div>
-</div>
-{% else%}
-<h2 class="titulo text-center">
-                  No tiene permisos para ingresar a esta sección
-                 
-                  
-              </h2>
-{%endif%}
-<hr>
                         
-<table  align="right" >
-    <tr>
-    <td> <a href="/tratamiento/listar_tratamiento/" class="btn btn-info">Ver listado de tratamientos </a> </td>
-    </tr>
-</table>
-
+            </div>
+        
+    {% else%}
+        <h2 class="titulo text-center">
+            No tiene permisos para ingresar a esta sección
+        </h2>
+                    
+    {%endif%}                          
+                <table  align="center" >
+                    <tr>
+                    <td> <a href="/tratamiento/listar_tratamiento/" class="btn btn-info">Ver listado de tratamientos </a> </td>
+                    </tr>
+                </table>
+   </div>
 {%endblock%}
