--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/panel_control.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/panel_control.html
@@ -4,26 +4,26 @@
 
 {%block slider%}
 <!--Slider-======================================BLOQUE DEl CARROUSEL========================================================-->
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="{% static 'img/modelo1.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
+           <br> 
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="{% static 'img/modelo1.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="{% static 'img/tiempo.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="{% static 'img/fondo3.jpg' %}" class="d-block w-100" alt="..." width="550" height="400">
+                    </div>
+                    <div class="carousel-item ">
+                      <img src="{% static 'img/odontologia.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
+                    </div>
+                </div> 
             </div>
-            <div class="carousel-item">
-              <img src="{% static 'img/tiempo.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
-            </div>
-            <div class="carousel-item">
-              <img src="{% static 'img/fondo3.jpg' %}" class="d-block w-100" alt="..." width="550" height="400">
-            </div>
-            <div class="carousel-item ">
-              <img src="{% static 'img/odontologia.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
-            </div>
-          </div> 
-      </div>
-{% endblock %}
+{% endblock %} 
 
-{%block content %}
- <br>  
+{%block content %}  
       <main>
         <!--Contenido -->
         <div class="container">
@@ -36,7 +36,7 @@
               <div class="row projects justify-content-center">
                 <div class="content-project col-12 col-lg-4 col-md-4">
                   <a href="" data-toggle="modal" data-target="#modal">
-                    <img src="{% static 'img/cuidadodental.jpg' %}" class="w-75 mx-auto d-block" alt="cuidadodental">
+                    <img src="{% static 'img/cuidadodental.jpg' %}" class="w-75 mx-auto d-block" alt="cuidadodental1">
                   </a>
                 </div>
                 <br>
@@ -61,7 +61,7 @@
     
                 <div class="content-project col-12 col-lg-4 col-md-4">
                   <a href="" data-toggle="modal" data-target="#modal">
-                    <img src="{% static 'img/elemento1.jpg' %}" class="w-75 mx-auto d-block" alt="cuidadodental">
+                    <img src="{% static 'img/elemento1.jpg' %}" class="w-60 mx-auto d-block" alt="cuidadodental">
                   </a>
                 </div>
                 <div class="content-project col-12 col-lg-8 col-md-8">
