Modificacion de envio de contraseña
-Trabajando con API de gmail, aun no terminado

--- a/Proyecto2/SmileSoft/webapp/templates/inicio/confirmacion_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/confirmacion_usuario.html
@@ -46,13 +46,11 @@
                         <!-- <table> -->
                         <h3 class="text-center text-Gray"><i>¡Atención!</i> </h3>
                         <div class="row justify-content-center align-items-center">
-                            <!-- <div class="col-md-10"> -->
                             <p class="text-justify">
                                 <i>
                                     Usted ya cuenta con un usuario. ¿Desea iniciar sesión?
                                 </i>
                             </p>
-                            <!-- </div> -->
                         </div>
                         <div>
                             <div align="center" > 
@@ -62,12 +60,12 @@
                             <br>
                             <div align="center">
                                 ¿No recuerda su contraseña?
-                                <a href="#" class="btn btn-link">Solicítelo aqui</a>
+                                <a href="/generar_password/{{cedula}}" class="btn btn-link">Solicítelo aqui</a>
                             </div>
+                        </div>
                 </div>
             </div>
         </div>
-        <!-- </div> -->
 
            <!--===CDN Separate Popper and Bootstrap JS ===-->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
