--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -70,6 +70,7 @@
                                 ¿Aún no tiene un usuario? 
                                 <a href="/consultar_documento/" class="btn btn-link">Crear una cuenta Aquí</a>
                             </div>
+                            <a href="/enviar_correo" class="btn btn-link"></a>
                             <br>
                             {% comment %} <div id="recuperar" class="text-center">
                                 <a href="/sesion/recuperar_pass/" class="text-black">¿Olvidaste tu contraseña?</a>
