--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -32,17 +32,13 @@
 
 	    {% comment %} <div id="login" > {% endcomment %}
         <h2 class="text-center text-gray pt-5">  SmileSoft </h2>
-        {% comment %} <div align="center"> <img width="100" height="100" src="https://cdn-icons.flaticon.com/png/512/5645/premium/5645053.png?token=exp=1649214401~hmac=c048440d327bb79136bc7577123be615" alt="" title="" class="loaded"></div> {% endcomment %}
-        {% comment %} <img width="100" height="100" src="https://cdn-icons.flaticon.com/png/512/5645/premium/5645309.png?token=exp=1649214393~hmac=038a0d1b47301bd32dbb95dcef08f7ae" alt="" title="" class="loaded">  {% endcomment %}
         <div align="center">  <img src="{% static 'img/inicio.png' %}"  width="100" height="100"> </div>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div class="login-box col-md-12">
-                        {% comment %} action="{% url 'django.contrib.auth.views.login' %}" {% endcomment %}
                         <form id="login-form" class="form-signin" action="" method="post">
                             {% csrf_token %}
-                            <br>
                             <h3 class="text-center text-Gray">¡Bienvenido!</h3>
                             <div class="form-group">
                                 {% csrf_token %}
@@ -70,15 +66,9 @@
                                 ¿Aún no tiene un usuario? 
                                 <a href="/consultar_documento/" class="btn btn-link">Crear una cuenta Aquí</a>
                             </div>
-                            <a href="/enviar_correo" class="btn btn-link"></a>
-                            <br>
-                            {% comment %} <div id="recuperar" class="text-center">
-                                <a href="/sesion/recuperar_pass/" class="text-black">¿Olvidaste tu contraseña?</a>
+                            <div id="recuperar" class="text-center">
+                                <a href="/recuperar_password/" class="btn btn-link">¿Olvidaste tu contraseña?</a>
                             </div>
-
-                            <div id="enviarcorreo" class="text-center">
-                                <a href="/sesion/enviarcorreo/" class="text-black">enviar un correo</a>
-                            </div> {% endcomment %}
                             <br>
                            {% csrf_token %}
                             <div class="alert alert-success" role="alert">
