--- a/Proyecto2/SmileSoft/webapp/templates/inicio/mensaje_redireccion2.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/mensaje_redireccion2.html
@@ -44,28 +44,24 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-5">
                         <!-- <table> -->
-                        <h3 class="text-center text-Gray"><i>¡Atención!</i> </h3>
+                        <h3 class="text-center text-Gray"><i>Verificación de Usuario</i> </h3>
                         <div class="row justify-content-center align-items-center">
+                            <!-- <div class="col-md-10"> -->
                             <p class="text-justify">
                                 <i>
-                                    Usted ya cuenta con un usuario. ¿Desea iniciar sesión?
+                                    Usted no cuenta con un usuario en el sistema.
                                 </i>
                             </p>
+                            <!-- </div> -->
                         </div>
                         <div>
                             <div align="center" > 
-                                <a href="/login/" class="btn btn-primary " style="width: 70px">OK</a>
-                                
+                                <a href="/login/" class="btn btn-primary">OK</a>
                             </div>
-                            <br>
-                            <div align="center">
-                                ¿No recuerda su contraseña?
-                                <a href="/password_reset/{{cedula}}" class="btn btn-link">Solicítelo aqui</a>
-                            </div>
-                        </div>
                 </div>
             </div>
         </div>
+        <!-- </div> -->
 
            <!--===CDN Separate Popper and Bootstrap JS ===-->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
