Ajustes sobre titulos tratamientos

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -231,7 +231,7 @@
                                                       <strong class="dropdown-header" style="color:blue; font-size:16px;" >
                                                         Asignación de Tratamientos a Pacientes 
                                                       </strong>
-                                                      <li><a class="dropdown-item" href="/tratamiento/listar_paciente2">• Asignar Tratamientos</li></a> 
+                                                      <li><a class="dropdown-item" href="/tratamiento/listar_paciente2">• Seleccionar Paciente</li></a> 
                                                     {%endif%}
                                                 </ul>
                                               </li>
