Cambios Asignar Tratamiento a Paciente
- Asignar Tratamiento a Paciente
- Modificar Tratamiento a Paciente

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
@@ -46,6 +46,10 @@
 					<i class="bi-pencil-square"></i>
 					Asignar Tratamiento
 				</a>
+				<a class="btn btn-primary" href="/administrativo/modificar_tratamiento_asignado/{{ paciente.id_paciente }}">
+					<i class="bi-pencil-square"></i>
+					Mod. Trat. Asig.
+				</a>
 				<a class="btn btn-info" href="/tratamiento/tratamientos_asignados/{{ paciente.id_paciente }}">
 					<i class="bi-eye-fill"></i>
 					Tratamientos asignados
